# task-cli

./: .gitignore  README.md  pyproject.toml
src/: task_cli.py
tests/: test_task_cli.py
